Add field to tweet to store job state and data

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 			"previewLimit": 50,
 			"server": "localhost",
 			"port": 5432,
-			"database": "postgres",
+			"database": "code_snippet_generator_dev",
 			"username": "postgres",
 			"password": "postgres"
 		}]
