--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,15 +17,15 @@ ARG COMMON_SCRIPT_SHA="84cb2f8be279acaa04136ad00e9226c7e1a63edd42ceb3c0f5feb627f
 # Optional Settings for Phoenix
 ARG PHOENIX_VERSION="1.5.4"
 
-# ARG NODE_SCRIPT_SOURCE="https://raw.githubusercontent.com/microsoft/vscode-dev-containers/main/script-library/node-debian.sh"
-# ARG NODE_SCRIPT_SHA="dev-mode"
-# ARG NODE_VERSION="none"
-# ENV NVM_DIR=/usr/local/share/nvm
-# ENV NVM_SYMLINK_CURRENT=true
-# ENV PATH=${NVM_DIR}/current/bin:${PATH}
+ARG NODE_SCRIPT_SOURCE="https://raw.githubusercontent.com/microsoft/vscode-dev-containers/main/script-library/node-debian.sh"
+ARG NODE_SCRIPT_SHA="dev-mode"
+ARG NODE_VERSION="none"
+ENV NVM_DIR=/usr/local/share/nvm
+ENV NVM_SYMLINK_CURRENT=true
+ENV PATH=${NVM_DIR}/current/bin:${PATH}
 
 # [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
-# ARG NODE_VERSION="lts/*"
+ARG NODE_VERSION="lts/*"
 
 # Install needed packages and setup non-root user. Use a separate RUN statement to add your own dependencies.
 RUN apt-get update \
@@ -36,10 +36,10 @@ RUN apt-get update \
   && /bin/bash /tmp/common-setup.sh "${INSTALL_ZSH}" "${USERNAME}" "${USER_UID}" "${USER_GID}" "${UPGRADE_PACKAGES}" \
   #
   # [Optional] Install Node.js for use with web applications
-  # && if [ "$NODE_VERSION" != "none" ]; then \
-  # curl -sSL ${NODE_SCRIPT_SOURCE} -o /tmp/node-setup.sh \
-  # && ([ "${NODE_SCRIPT_SHA}" = "dev-mode" ] || (echo "${COMMON_SCRIPT_SHA} */tmp/node-setup.sh" | sha256sum -c -)) \
-  # && /bin/bash /tmp/node-setup.sh "${NVM_DIR}" "${NODE_VERSION}" "${USERNAME}"; \
+  && if [ "$NODE_VERSION" != "none" ]; then \
+  curl -sSL ${NODE_SCRIPT_SOURCE} -o /tmp/node-setup.sh \
+  && ([ "${NODE_SCRIPT_SHA}" = "dev-mode" ] || (echo "${COMMON_SCRIPT_SHA} */tmp/node-setup.sh" | sha256sum -c -)) \
+  && /bin/bash /tmp/node-setup.sh "${NVM_DIR}" "${NODE_VERSION}" "${USERNAME}"; \
   fi \
   #
   # Install dependencies
