--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ code_snippet_generator-*.tar
 npm-debug.log
 /assets/node_modules/
 
+# Ignore generated js hook files for components
+assets/js/_hooks/
